# hapax-constitution

./: .coderabbit.yaml  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .zenodo.json  AGENTS.md  CITATION.cff  CLAUDE.md  NOTICE.md  README.md  agent-architecture.md  codecov.yml  codemeta.json  operations-manual.md  pattern-guide.md  pyproject.toml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: auto-fix.yml  claude-review.yml  dependabot-auto-merge.yml  repo-settings-drift-check.yml  sdlc-axiom-gate.yml  sdlc-implement.yml  sdlc-review.yml  sdlc-triage.yml  semgrep.yml  yaml-lint.yml
axioms/: registry.yaml
axioms/implications/: corporate-boundary.yaml  epistemic-stance.yaml  executive-function.yaml  interpersonal-transparency.yaml  lrr-70b-reactivation-guard.yaml  management-governance.yaml  single-user.yaml
commons/: __init__.py  evidence_ledger.py  governance_case.py  ordinal_stage.py  risk_tier.py
demo/pipeline/: charts.py  diagrams.py  dossier.py  html_player.py  lessons.py  screencasts.py  screenshots.py
docs/: cross-project-boundary.md  document-registry.yaml
docs/audit/: 01-shared-foundation.md  02-data-ingestion.md  03-operator-profile.md  04-health-observability.md  05-intelligence-agents.md  06-cockpit.md  07-web-layer.md  08-infrastructure.md  09-holistic.md  10-fix-plan.md
docs/design/: deliberative-governance.md
docs/plans/: 2026-03-02-system-audit-design.md  2026-03-02-system-audit-execution.md  2026-03-03-axiom-enforcement-design.md  2026-03-03-axiom-enforcement-plan.md  2026-03-03-hapax-system-plugin-design.md  (+22 more)
domains/: registry.yaml
knowledge/: management-sufficiency.yaml  music-sufficiency.yaml  personal-sufficiency.yaml  technical-sufficiency.yaml
rdlc/: __init__.py  admission.py  gate_result.py  gate_status.py  m_binding.py  r_stage.py  research_case.py  research_ledger.py  validator.py  validity_gates.py
research/: axiom-enforcement.md  axiom-gap-analysis.md  axiom-governance-evaluation.md  comparable-projects.md  doubling-down-evaluation.md  elegant-puzzle-larson.md  landscape-analysis-2026.md  management-synthesis.md  scaling-people-deep-dive.md  team-topologies-deep-dive.md
scripts/: chi_data_export.py  chi_episode_annotate.py  sdlc_axiom_judge.py  sdlc_review.py  sdlc_triage.py
sdlc/: authority_case.py  evidence_ledger.py  risk_tier.py  stage_taxonomy.py  validator.py
tests/: test_chi_data_export.py  test_chi_episode_annotate.py  test_repo_settings.py
(+29 files in other folders)
