[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sdlc", "demo"]

[tool.hatch.build]
include = [
    "sdlc/**",
    "demo/**",
]

[project]
name = "hapax-sdlc"
version = "0.2.0"
description = "Shared SDLC and demo pipeline infrastructure for hapax repositories"
requires-python = ">=3.12"
dependencies = [
    "pyyaml>=6.0",
    "pydantic>=2.12",
]

[project.optional-dependencies]
ci = []
demo = [
    "httpx>=0.28.0",
    "jinja2>=3.1",
    "matplotlib>=3.9",
    "moviepy>=2.0.0",
    "numpy>=1.24.0",
    "Pillow>=11.0.0",
    "playwright>=1.50.0",
    "typing-extensions>=4.5.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
line-length = 100
[tool.ruff.lint.isort]
known-first-party = ["sdlc", "demo", "shared", "scripts"]

[dependency-groups]
dev = [
    "pre-commit>=4.0",
    "pytest>=9.0.2",
]
