[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["commons", "sdlc", "rdlc", "demo", "hapax_sdlc"]

[tool.hatch.build]
include = [
    "commons/**",
    "sdlc/**",
    "rdlc/**",
    "demo/**",
    "hapax_sdlc/**",
]

[project]
name = "hapax-sdlc"
version = "0.2.0"
description = "Shared SDLC and demo pipeline infrastructure for hapax repositories"
requires-python = ">=3.12"
dependencies = [
    "pyyaml>=6.0",
    "pydantic>=2.12",
]

[project.optional-dependencies]
ci = []
demo = [
    "httpx>=0.28.0",
    "jinja2>=3.1",
    "matplotlib>=3.9",
    "moviepy>=2.0.0",
    "numpy>=1.24.0",
    "Pillow>=11.0.0",
    "playwright>=1.50.0",
    "typing-extensions>=4.5.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
line-length = 100
[tool.ruff.lint.isort]
known-first-party = ["commons", "sdlc", "rdlc", "ndcvb", "demo", "hapax_sdlc", "shared", "scripts"]

[dependency-groups]
dev = [
    "pre-commit>=4.0",
    "pytest>=9.0.2",
    "ndcvb",
]

# RDLC's M block (the NDCVB instrument) lives in a sibling research repo. It is a
# TEST/dev dependency only — rdlc.m_binding imports it lazily at runtime, so the
# governance package never hard-depends on the research artifact (M absent ->
# honest-dark, not an import crash).
[tool.uv.sources]
ndcvb = { path = "../non-deception-benchmark", editable = true }
